--- a/public/styles/Home.css
+++ b/public/styles/Home.css
@@ -13,569 +13,6 @@ body {
     min-height: 100vh;
 }
 
-.puts {
-    position: absolute;
-    background-color: #FFF;
-    width: 420px;
-    border-radius: 10px;
-    padding: 30px 40px;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%)
-}
-
-.puts h1 {
-    text-align: center;
-    color: #001f3f;
-    font-size: 36px;
-}
-
-.puts p {
-    text-align: center;
-    color: #001f3f;
-    font-size: 18px;
-}
-
-.puts .input-box {
-    width: 100%;
-    height: 50px;
-    background-color: #f2f2f2;
-    margin: 30px 0;
-}
-
-.input-box input {
-    width: 100%;
-    height: 100%;
-    background: transparent;
-    border: none;
-    outline: none;
-    border: 2px solid rgba(255, 255, 255, .2);
-    font-size: 16px;
-}
-
-.btn-login {
-    width: 100%;
-    height: 45px;
-    background-color: #2874A6;
-    color: #FFF;
-    border: none;
-    outline: none;
-    border-radius: 40px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, .1);
-    cursor: pointer;
-    font-size: 16px;
-    font-weight: 600;
-}
-
-.btn-login:hover,
-.btn-login:active {
-    color: #fff;
-    background-color: #1b8dd9;
-    border-color: #1b8dd9;
-}
-
-.btn-login:focus {
-    box-shadow: 0 0 0 3px rgba(121, 82, 179, 0.25);
-}
-
-.puts .register-link {
-    font-size: 16px;
-    text-align: center;
-    margin-top: 20px;
-}
-
-.register-link p a {
-    color: #001f3f;
-    text-decoration: none;
-    font-weight: 600;
-}
-
-.register-link p a:hover {
-    text-decoration: underline;
-}
-
-.cerrar-form {
-    position: absolute;
-    top: 10px;
-    right: 30px;
-    font-size: 40px;
-    cursor: pointer;
-    text-decoration: none;
-    color: #001f3f;
-}
-
-.btn-cancel {
-    width: 50%;
-    padding: 15px;
-    background-color: #9CA3AF;
-    border: 0;
-    box-sizing: border-box;
-    cursor: pointer;
-    font-weight: bold;
-    font-size: medium;
-    color: #fff;
-    text-align: center;
-    margin-top: 20px;
-
-    appearance: button;
-    text-decoration: none;
-    -webkit-appearance: button;
-    -moz-appearance: button;
-}
-
-.btn-cancel:hover,
-.btn-cancel:active {
-    color: #fff;
-    background-color: #6b7280;
-    border-color: #6b7280;
-}
-
-.btn-cancel:focus {
-    box-shadow: 0 0 0 3px #6b7280;
-}
-
-.btn-save {
-    width: 50%;
-    padding: 15px;
-    background-color: #1D4ED8;
-    border: 0;
-    box-sizing: border-box;
-    cursor: pointer;
-    font-weight: bold;
-    font-size: medium;
-    color: #fff;
-    margin-top: 20px;
-
-    appearance: button;
-    text-decoration: none;
-    -webkit-appearance: button;
-    -moz-appearance: button;
-}
-
-.btn-save:hover,
-.btn-save:active {
-    color: #fff;
-    background-color: #1E3A8A;
-    border-color: #1E3A8A;
-}
-
-.btn-save:focus {
-    box-shadow: 0 0 0 3px #1E3A8A;
-}
-
-.register-form {
-    width: 400px;
-    margin: 0 auto;
-    padding: 0px 20px 60px 20px;
-    margin-top: 35px;
-    font-family: roboto;
-    text-align: left !important;
-    box-shadow: 0 19px 38px rgba(0, 0, 0, 0.30), 0 15px 12px rgba(0, 0, 0, 0.22);
-}
-
-.register-form h1 {
-    text-align: left;
-    color: midnightblue;
-    font-size: 22px;
-    padding: 70px 0 10px 0;
-}
-
-.register-form input {
-    width: 100%;
-    padding: 15px;
-    border: 1px solid #ced4da;
-    margin-bottom: 10px;
-    box-sizing: border-box;
-}
-
-.select-css {
-    display: block;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 1.3;
-    padding: .4em 1.4em .3em .8em;
-    width: 400px;
-    max-width: 100%;
-    box-sizing: border-box;
-    margin: 0;
-    background-color: #f5f5f5;
-}
-
-.header-desktop {
-    background-color: #fff;
-    padding: 0px;
-    height: 100px;
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.header-mobile {
-    background-color: #fff;
-    height: 100px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    display: none;
-}
-
-.logo-mobile {
-    width: 200px;
-    height: 80px;
-    position: relative;
-    object-fit: cover;
-    float: left;
-    line-height: 80px;
-    margin-right: 40px;
-}
-
-
-.background-logo {
-    border-radius: 0px;
-    width: 474px;
-    height: 144px;
-    display: flex;
-    left: 0px;
-    top: 0px;
-    overflow: visible;
-}
-
-
-.header-info-box {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    position: absolute;
-    right: 80px;
-    left: 87px;
-    top: 0px;
-    height: 120px;
-}
-
-.sin-t-tulo-1-removebg-preview-1 {
-    flex-shrink: 0;
-    width: 223px;
-    height: 128px;
-    position: relative;
-    object-fit: cover;
-}
-
-.info-box {
-    display: flex;
-    flex-direction: row;
-    gap: 20px;
-    align-items: center;
-    justify-content: flex-end;
-    flex-shrink: 0;
-    width: 683px;
-    position: relative;
-}
-
-
-.info-adress {
-    flex-shrink: 0;
-    width: 149px;
-    height: 37px;
-    position: static;
-}
-
-.frame-61 {
-    display: flex;
-    flex-direction: row;
-    gap: 10px;
-    align-items: center;
-    justify-content: flex-start;
-    position: absolute;
-    left: -12px;
-    top: 18px;
-}
-
-.address-icon {
-    flex-shrink: 0;
-    width: 35px;
-    height: 35px;
-    position: relative;
-    object-fit: cover;
-}
-
-.frame-60 {
-    display: flex;
-    flex-direction: column;
-    gap: 0px;
-    align-items: flex-start;
-    justify-content: center;
-    flex-shrink: 0;
-    position: relative;
-}
-
-.address {
-    color: var(--navyblue, #001f3f);
-    text-align: center;
-    font-family: "Poppins-Medium", sans-serif;
-    font-size: 13px;
-    font-weight: 500;
-    position: relative;
-}
-
-._123-new-york-usa {
-    color: #808080;
-    text-align: center;
-    font-family: "Poppins-Regular", sans-serif;
-    font-size: 11px;
-    font-weight: 400;
-    position: relative;
-}
-
-.info-phone {
-    flex-shrink: 0;
-    width: 147px;
-    height: 37px;
-    position: static;
-}
-
-.frame-612 {
-    display: flex;
-    flex-direction: row;
-    gap: 10px;
-    align-items: center;
-    justify-content: flex-start;
-    position: absolute;
-    left: 157px;
-    top: 18px;
-}
-
-.phone-icon {
-    flex-shrink: 0;
-    width: 35px;
-    height: 35px;
-    position: relative;
-    object-fit: cover;
-}
-
-.phone-number {
-    color: var(--navyblue, #001f3f);
-    text-align: center;
-    font-family: "Poppins-Medium", sans-serif;
-    font-size: 13px;
-    font-weight: 500;
-    position: relative;
-}
-
-._650-123-1212 {
-    color: #808080;
-    text-align: center;
-    font-family: "Poppins-Regular", sans-serif;
-    font-size: 11px;
-    font-weight: 400;
-    position: relative;
-}
-
-.info-email {
-    flex-shrink: 0;
-    width: 169px;
-    height: 37px;
-    position: static;
-}
-
-.frame-613 {
-    display: flex;
-    flex-direction: row;
-    gap: 10px;
-    align-items: center;
-    justify-content: flex-start;
-    position: absolute;
-    left: 324px;
-    top: 18px;
-}
-
-.email-icon {
-    flex-shrink: 0;
-    width: 35px;
-    height: 35px;
-    position: relative;
-    object-fit: cover;
-}
-
-.email-us-here {
-    color: var(--navyblue, #001f3f);
-    text-align: center;
-    font-family: "Poppins-Medium", sans-serif;
-    font-size: 13px;
-    font-weight: 500;
-    position: relative;
-}
-
-.example-gmail-com {
-    color: #808080;
-    text-align: center;
-    font-family: "Poppins-Regular", sans-serif;
-    font-size: 11px;
-    font-weight: 400;
-    position: relative;
-}
-
-/* ------ login ------*/
-
-.a-logout {
-    flex-shrink: 0;
-    width: 170px;
-    height: 73px;
-    position: static;
-    border-radius: 20px;
-    cursor: pointer;
-    border: 1px;
-    background-color: #f2f2f2;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.navbar-mobile .a-logout-mobile {
-    position: relative;
-    left: 100px;
-    margin-top: 40px;
-    margin-bottom: 40px;
-    width: 50%;
-    height: 20px;
-    background-color: #304C78;
-    border-radius: 100px;
-    color: #FFF;
-    font-size: 20px;
-    text-align: center;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-}
-
-.txt-cerrar-sesion {
-    color: var(--navyblue, #001f3f);
-    text-align: left;
-    font-family: "Poppins-Medium", sans-serif;
-    font-size: 13px;
-    font-weight: 500;
-    position: absolute;
-    left: 571px;
-    top: 10px;
-    width: 100px;
-}
-
-.txt-iniciar-sesion {
-    color: var(--navyblue, #001f3f);
-    text-align: left;
-    font-family: "Poppins-Medium", sans-serif;
-    font-size: 13px;
-    font-weight: 500;
-    position: absolute;
-    left: 571px;
-    top: 29px;
-    width: 100px;
-
-}
-
-.user-img {
-    width: 40px;
-    height: 40px;
-    position: absolute;
-    left: 524px;
-    top: 16px;
-    object-fit: cover;
-}
-
-/* -------------------------- nabvar ------------------------- */
-
-.navbar {
-    background: var(--navyblue, #001f3f);
-    border-radius: 10px;
-    padding: 0px 0px 0px 20px;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    position: absolute;
-    right: 83px;
-    left: 87px;
-    top: 113px;
-    overflow: hidden;
-    height: 45px;
-    margin-bottom: 20px;
-}
-
-.options-navbar {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: flex-start;
-    flex-shrink: 0;
-    position: relative;
-    list-style-type: none;
-}
-
-.options-navbar li {
-    color: #ffffff;
-    text-align: center;
-    font-family: "Poppins-Regular", sans-serif;
-    font-size: 13px;
-    font-weight: 400;
-    position: relative;
-}
-
-.options-navbar li a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-}
-
-.options-navbar li a:hover {
-    color: #ffd700;
-}
-
-.backgrount-search {
-    background: #ffd700;
-    padding: 20px;
-    display: flex;
-    flex-direction: row;
-    gap: 30px;
-    align-items: center;
-    justify-content: flex-start;
-    flex-shrink: 0;
-    position: relative;
-    overflow: hidden;
-}
-
-.txt-search {
-    color: var(--navyblue, #001f3f);
-    text-align: left;
-    font-family: "Poppins-Medium", sans-serif;
-    font-size: 13px;
-    font-weight: 500;
-    position: relative;
-    display: flex;
-
-}
-
-.lbl-search {
-    border-radius: 30px;
-    flex-shrink: 0;
-    width: 281px;
-    height: 28px;
-    position: relative;
-    overflow: visible;
-    background-color: #ffffff;
-    text-align: center;
-    font-family: 'Arial', sans-serif;
-    border: none;
-    outline: none;
-}
-
-input:focus {
-    border: none;
-    outline: none;
-    border-color: #304c78;
-    box-shadow: 0 0 5px #304c78;
-
-}
 
 /* Estilos para el modal */
 .modal {
@@ -598,48 +35,72 @@ section {
     overflow: hidden;
     padding-top: 10px;
     margin-bottom: -40px;
+    width: 80%; /* Ancho del contenedor */
+    margin: 0 auto; /* Centrado horizontalmente */
+    overflow: hidden; /* Para ocultar las imágenes que desborden el contenedor */
+    position: relative; /* Para posicionar las imágenes */
+    height: 300px; /* Altura del contenedor */
 }
 
-.slide {
-    width: 130vh;
-    height: 449px;
-    overflow: hidden;
-    border-radius: 10px;
+.slider {
+    display: flex; /* Mostrar las imágenes en una fila */
+    transition: transform 0.5s ease; /* Animación para el desplazamiento de las imágenes */
 }
 
-.slide ul {
+.slider img {
+    width: 100%; /* Ancho completo de la imagen */
+    height: auto; /* Altura automática para mantener la proporción */
+    object-fit: cover; /* Para cubrir todo el contenedor sin distorsionar */
+    flex-shrink: 0; /* Evitar que las imágenes se reduzcan */
+}
+
+.button-container {
+    text-align: center;
+    margin-top: 20px;
+}
+
+.button-container button {
+    padding: 10px 20px;
+    margin: 0 10px;
+    cursor: pointer;
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    font-size: 16px;
+    transition: background-color 0.3s ease;
+}
+
+.button-container button:hover {
+    background-color: #0056b3;
+}
+
+#uploadForm {
     display: flex;
-    padding: 0;
-    width: 300px;
-
-    animation: slide 15s infinite cubic-bezier(0.55, 0.48, 0.37, 0.92);
+    flex-direction: column;
+    align-items: center;
+    margin-top: 20px;
 }
 
-@keyframes slide {
-    0% {
-        margin-left: 0%;
-    }
-
-    30% {
-        margin-left: 0%;
-    }
-
-    35% {
-        margin-left: -100%;
-    }
-
-    70% {
-        margin-left: -100%;
-    }
-
-    75% {
-        margin-left: -200%;
-    }
-
-    95% {
-        margin-left: -200%;
-    }
+#uploadForm input[type="file"] {
+    margin-bottom: 10px;
 }
+
+#uploadForm input[type="submit"] {
+    padding: 10px 20px;
+    cursor: pointer;
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    font-size: 16px;
+    transition: background-color 0.3s ease;
+}
+
+#uploadForm input[type="submit"]:hover {
+    background-color: #0056b3;
+}
+
 
 /* --------------------------- productos --------------------------------*/
 .productos-section {
@@ -1124,81 +585,6 @@ section {
     margin-top: 20px;
 }
 
-.footer {
-    box-sizing: border-box;
-    width: 1443px;
-    height: 345px;
-    position: relative;
-    background-color: #808080;
-    color: #fff;
-    text-align: center;
-    padding: 10px 0;
-    width: 100%;
-    bottom: 0;
-}
-
-.social-icons {
-    width: 50px;
-    height: 50px;
-    position: absolute;
-    left: calc(50% - -228.5px);
-    bottom: 207px;
-    object-fit: cover;
-}
-
-.txt-futer {
-    position: absolute;
-    inset: 0;
-}
-
-.txt-copy {
-    color: #ffffff;
-    text-align: center;
-    font-family: "Inter-SemiBold", sans-serif;
-    font-size: 20px;
-    line-height: 130%;
-    font-weight: 600;
-    position: absolute;
-    left: calc(50% - 152.5px);
-    bottom: 56px;
-    width: 305px;
-    height: 25px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.txt-footers {
-    color: #ffffff;
-    text-align: center;
-    font-family: "Inter-Regular", sans-serif;
-    font-size: 16px;
-    font-weight: 400;
-    position: absolute;
-    left: calc(50% - 4%);
-    bottom: 275px;
-    width: 101px;
-    height: 14px;
-    line-height: 140%;
-}
-
-.txt-footers a {
-    color: #ffffff;
-    text-decoration: none;
-}
-
-.txt-footers a:visited {
-    color: #fff;
-}
-
-.img-logo {
-    width: 183px;
-    height: 183px;
-    position: absolute;
-    left: calc(50% - 411.5px);
-    bottom: 81px;
-    object-fit: cover;
-}
 
 /* --------------------------- seccion responsive ------------------------------ */
 
