--- a/views/home.ejs
+++ b/views/home.ejs
@@ -9,7 +9,115 @@
 </head>
 
 <body>
-
+    <div class="header-desktop">
+        <svg class="background-logo" width="474" height="144" viewBox="0 0 474 144" fill="none"
+          xmlns="http://www.w3.org/2000/svg">
+          <path
+            d="M0 0H474L456.883 11.3123C442.125 21.0648 431.486 35.9202 427.004 53.0315C422.49 70.2642 411.733 85.2044 396.821 94.9507L374.768 109.365C357.782 120.467 338.587 127.744 318.51 130.691L266.271 138.361L0 144V0Z"
+            fill="#304C78" />
+        </svg>
+        <div class="header-info-box">
+          <img class="sin-t-tulo-1-removebg-preview-1" src="resources/img/header/logo.png" />
+          <div class="info-box">
+            <div class="info-adress">
+              <div class="frame-61">
+                <img class="address-icon" src="resources/img/header/address-icon0.png" />
+                <div class="frame-60">
+                  <div class="address">Address</div>
+                  <div class="_123-new-york-usa">123, New York, USA</div>
+                </div>
+              </div>
+            </div>
+            <div class="info-phone">
+              <div class="frame-612">
+                <img class="phone-icon" src="resources/img/header/phone-icon0.png" />
+                <div class="frame-60">
+                  <div class="phone-number">Phone Number</div>
+                  <div class="_650-123-1212">(650) 123-1212</div>
+                </div>
+              </div>
+            </div>
+            <div class="info-email">
+              <div class="frame-613">
+                <img class="email-icon" src="resources/img/header/email-icon0.png" />
+                <div class="frame-60">
+                  <div class="email-us-here">Email Us Here</div>
+                  <div class="example-gmail-com">example@gmail.com</div>
+                </div>
+              </div>
+            </div>
+    
+          </div>
+        </div>
+    
+        <!-- Navbar -->
+        <nav class="navbar">
+          <ul class="options-navbar">
+            <li>
+              <a href="/home">Inicio</a>
+            </li>
+            <li>
+              <a href="/productPage">Productos</a>
+            </li>
+            <li>
+              <a href="/home#title-Distridulces">¿Quienes somos?</a>
+            </li>
+            <li>
+              <a href="/home#contacto">Contactanos</a>
+            </li>
+          </ul>
+          <div class="backgrount-search">
+            <label for="product-search" class="txt-search">Busqueda</label>
+            <input type="text" id="product-search" name="product-search" class="lbl-search">
+          </div>
+        </nav>
+      </div>
+    
+      <div class="header-mobile">
+        <img class="logo-mobile" src="resources/img/header/img-logo-mobile.png" />
+        <input type="checkbox" id="check">
+        <label for="check" class="mostrar-menu">
+          &#8801
+        </label>
+    
+        <nav class="navbar-mobile">
+          <img class="logo-mobile-navbar" src="resources/img/header/img-logo-mobile.png" />
+          <a href="/">- Inicio</a>
+          <a href="/">- ¿Quienes Somos?</a>
+          <a href="productPage" target="pages">- Productos</a>
+          <a href="/">- Contactanos</a>
+          
+                <div class="info-box-mobile">
+                  <div class="info-adress">
+                    <div class="frame-61">
+                      <img class="address-icon" src="resources/img/header/address-icon0.png" />
+                      <div class="frame-60">
+                        <div class="address">Address</div>
+                        <div class="_123-new-york-usa">123, New York, USA</div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="info-phone">
+                    <div class="frame-612">
+                      <img class="phone-icon" src="resources/img/header/phone-icon0.png" />
+                      <div class="frame-60">
+                        <div class="phone-number">Phone Number</div>
+                        <div class="_650-123-1212">(650) 123-1212</div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="info-email">
+                    <div class="frame-613">
+                      <img class="email-icon" src="resources/img/header/email-icon0.png" />
+                      <div class="frame-60">
+                        <div class="email-us-here">Email Us Here</div>
+                        <div class="example-gmail-com">example@gmail.com</div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+        </nav>
+    </div>
     <!-- Sección Banner -->
     <section id="inicio">
         <section class="section-banner" id="section-banner">
@@ -171,6 +279,28 @@
             <input type="hidden" name="_captcha" value="false">
         </form>
     </section>
+
+    <footer>
+        <div class="footer">
+            <div class="social-icons">
+                <a href=""><img class="img-instagram" src="resources/img/footer/img-instagram0.png" /></a>
+                <a href=""><img class="img-facebook" src="resources/img/footer/img-facebook0.png" /></a>
+                <a href=""><img class="img-whatapp" src="resources/img/footer/img-whatapp0.png" /></a>
+            </div>
+            <div class="txt-futer">
+                <div class="txt-copy">© 2024 - DISTRIDULCES.</div>
+                <div class="txt-footers">
+                    <a href="" class="txt-footer1">Politicas</a>
+                    <a href="" class="txt-footer2">Terminos y condiciones</a>
+                    <a href="" class="txt-footer3">Contactanos</a>
+                    <a href="" class="txt-footer4">Ubicanos</a>
+                    <a href="" class="txt-footer5">Productos</a>
+                    <a href="" class="txt-footer6">Quienes somos</a>
+                </div>
+            </div>
+            <img class="img-logo" src="resources/img/footer/img-logo0.png" />
+        </div>
+    </footer>
 </body>
 
 <script>
