--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,446 +10,14 @@
 
 <body>
 
-  <div class="header-desktop">
-    <svg class="background-logo" width="474" height="144" viewBox="0 0 474 144" fill="none"
-      xmlns="http://www.w3.org/2000/svg">
-      <path
-        d="M0 0H474L456.883 11.3123C442.125 21.0648 431.486 35.9202 427.004 53.0315C422.49 70.2642 411.733 85.2044 396.821 94.9507L374.768 109.365C357.782 120.467 338.587 127.744 318.51 130.691L266.271 138.361L0 144V0Z"
-        fill="#304C78" />
-    </svg>
-    <div class="header-info-box">
-      <img class="sin-t-tulo-1-removebg-preview-1" src="resources/img/header/logo.png" />
-      <div class="info-box">
-        <div class="info-adress">
-          <div class="frame-61">
-            <img class="address-icon" src="resources/img/header/address-icon0.png" />
-            <div class="frame-60">
-              <div class="address">Address</div>
-              <div class="_123-new-york-usa">123, New York, USA</div>
-            </div>
-          </div>
-        </div>
-        <div class="info-phone">
-          <div class="frame-612">
-            <img class="phone-icon" src="resources/img/header/phone-icon0.png" />
-            <div class="frame-60">
-              <div class="phone-number">Phone Number</div>
-              <div class="_650-123-1212">(650) 123-1212</div>
-            </div>
-          </div>
-        </div>
-        <div class="info-email">
-          <div class="frame-613">
-            <img class="email-icon" src="resources/img/header/email-icon0.png" />
-            <div class="frame-60">
-              <div class="email-us-here">Email Us Here</div>
-              <div class="example-gmail-com">example@gmail.com</div>
-            </div>
-          </div>
-        </div>
-
-        <% if (login) { %>
-          <a href="logout" class="a-logout">
-            <div class="txt-cerrar-sesion">Hola! <%= name %> <br><br> <strong style="color:#001f3f;">Cerrar
-                  sesion</strong></div>
-            <img class="user-img" src="resources/img/header/user.png" />
-          </a>
-          <% } else { %>
-            <h1><strong>
-                <%= name %>
-              </strong></h1>
-            <a href="login" class="a-logout">
-              <div class="txt-iniciar-sesion"><strong style="color:#001f3f;">Iniciar Sesion</strong></div>
-              <img class="user-img" src="resources/img/header/user.png" />
-            </a>
-            <% } %>
-
-      </div>
-    </div>
-
-
-
-    <!-- Navbar -->
-    <nav class="navbar">
-      <ul class="options-navbar">
-        <li>
-          <a href="/home">Inicio</a>
-        </li>
-        <li>
-          <a href="/productPage">Productos</a>
-        </li>
-        <li>
-          <a href="/home#title-Distridulces">¿Quienes somos?</a>
-        </li>
-        <li>
-          <a href="/home#contacto">Contactanos</a>
-        </li>
-      </ul>
-      <div class="backgrount-search">
-        <label for="product-search" class="txt-search">Busqueda</label>
-        <input type="text" id="product-search" name="product-search" class="lbl-search">
-      </div>
-    </nav>
+  <div class="container">
+    <h1>Bienvenido a Distridulces del eje</h1>
+    <a href="/home" class="btn">Entra a un mundo de maravillas</a>
+    <a href="login" class="a-logout">
+      <div class="txt-iniciar-sesion"><strong style="color:#001f3f;">Iniciar Sesion</strong></div>
+      <img class="user-img" src="resources/img/header/user.png" />
+    </a>
   </div>
-
-  <div class="header-mobile">
-    <img class="logo-mobile" src="resources/img/header/img-logo-mobile.png" />
-    <input type="checkbox" id="check">
-    <label for="check" class="mostrar-menu">
-      &#8801
-    </label>
-
-    <nav class="navbar-mobile">
-      <img class="logo-mobile-navbar" src="resources/img/header/img-logo-mobile.png" />
-      <a href="/">- Inicio</a>
-      <a href="/">- ¿Quienes Somos?</a>
-      <a href="productPage" target="pages">- Productos</a>
-      <a href="/">- Contactanos</a>
-      <% if (login) { %>
-        <h1> Hola! <strong>
-            <%= name %>
-          </strong></h1>
-        <a href="logout" class="a-logout-mobile">Logout</a>
-        <% } else { %>
-          <h1><strong>
-              <%= name %>
-            </strong></h1>
-          <a href="login" class="a-logout-mobile">Iniciar sesion</a>
-          <% } %>
-            <label for="check" class="esconder-menu">
-              &#215
-            </label>
-            <div class="info-box-mobile">
-              <div class="info-adress">
-                <div class="frame-61">
-                  <img class="address-icon" src="resources/img/header/address-icon0.png" />
-                  <div class="frame-60">
-                    <div class="address">Address</div>
-                    <div class="_123-new-york-usa">123, New York, USA</div>
-                  </div>
-                </div>
-              </div>
-              <div class="info-phone">
-                <div class="frame-612">
-                  <img class="phone-icon" src="resources/img/header/phone-icon0.png" />
-                  <div class="frame-60">
-                    <div class="phone-number">Phone Number</div>
-                    <div class="_650-123-1212">(650) 123-1212</div>
-                  </div>
-                </div>
-              </div>
-              <div class="info-email">
-                <div class="frame-613">
-                  <img class="email-icon" src="resources/img/header/email-icon0.png" />
-                  <div class="frame-60">
-                    <div class="email-us-here">Email Us Here</div>
-                    <div class="example-gmail-com">example@gmail.com</div>
-                  </div>
-                </div>
-              </div>
-            </div>
-    </nav>
-  </div>
-
-  <body>
-
-    <!-- Sección Banner -->
-    
-
-    <div class="button-container">
-      <button id="addImageButton" onclick="showUploadForm()">Agregar Imagen</button>
-      <button id="deleteImageButton" onclick="deleteImage()">Eliminar Imagen</button>
-
-    </div>
-
-    <form id="uploadForm" action="/upload" method="POST" enctype="multipart/form-data" style="display: none;">
-      <input type="file" id="fileInput" name="fileToUpload">
-      <input type="submit" value="Subir imagen">
-    </form>
-
-    <!-- Sección Productos -->
-    <section class="productos-section" id="productos">
-      <h2 class="title-productos">PRODUCTOS DE ALTA CALIDAD</h2>
-
-      <div class="slider-mobile">
-        <div class="fila">
-          <% Object.entries(productosPorCategoria).forEach(([categoria, productos])=> { %>
-            <% productos.forEach(producto=> { %>
-              <div class="item">
-                <div class="contenedor-foto">
-                  <img src="data:image/jpeg;base64,<%= Buffer.from(producto.imagen).toString('base64') %>"
-                    alt="<%= producto.nombre %>">
-                </div>
-                <div class="contenedor-texto">
-                  <p class="nombre">
-                    <%= producto.nombre %>
-                  </p>
-                  <p class="descripcion">
-                    <%= producto.descripcion %>
-                  </p>
-                  <span class="precio">
-                    $<%= producto.precio %>
-                  </span>
-                </div>
-              </div>
-              <% }); %>
-
-                <% }); %>
-        </div>
-        <button class="prev-btn">&larr;</button>
-        <button class="next-btn">&rarr;</button>
-      </div>
-    </section>
-
-    </section>
-    <section class="title-Distridulces" id="title-Distridulces">
-      DISTRIDULCES
-    </section>
-
-    <!-- Sección mision -->
-    <section class="mision" id="section-aboutus">
-
-      <div class="txt-content-mision">
-        <img class="imgMision" src="resources/img/home/img_mision.png" />
-        <div class="content-txt-mision">
-          <h2 class="txt-title-mision">MISION</h2>
-          <p>
-            Llevar hasta los hogares colombianos los productos de nuestros aliados a través de nuestros
-            clientes, creando
-            oportunidad
-            de negocio para todos. Apoyados en una estructura de organización simple, recurso humano empoderado
-            y
-            tecnología de punta.
-            <br>
-            Desarrollamos un trabajo planeado y direccionado hacia el cumplimiento de indicadores para
-            satisfacción de
-            clientes y proveedores,
-            logrando así nuestra consolidación en el futuro.
-          </p>
-        </div>
-      </div>
-
-      <div class="txt-content-vision">
-        <img class="img-vision" src="resources/img/home/img_Vision.png" />
-        <div class="content-txt-vision">
-          <h2 class="txt-title-vision">VISION</h2>
-          <p>
-            Ser en el año 2028 la empresa preferida
-            por los clientes del canal tradicional en el eje cafetero para la compra
-            de productos de consumo masivo y
-            consolidarnos como lideres en ventas y distribución.
-            ola
-          </p>
-        </div>
-
-
-      </div>
-    </section>
-
-    <!-- Sección valores -->
-    <section class="valores">
-
-      <div class="txt-content-valores">
-        <h2 class="txt-title-valores">VALORES</h2>
-        <p>
-          Ser en el año 2028 la empresa preferida
-          por los clientes del canal tradicional en el eje cafetero para la compra
-          de productos de consumo masivo y
-          consolidarnos como lideres en ventas y distribución.
-        </p>
-      </div>
-      <img class="img-valores" src="resources/img/home/img_valores.jpg" />
-
-    </section>
-
-    <!-- Sección lineacorporativa -->
-    <section class="lineacorporativa">
-
-      <img class="img-lineacorporativa" src="resources/img/home/img_lineacorporativa.jpg" />
-      <div class="txt-content-lineacorporativa">
-        <h2 class="txt-title-lineacorporativa">LINEA CORPORATIVA</h2>
-        <p>
-          Somos un equipo de personas soñadoras y apasionadas que ponemos amor a todo lo que hacemos.
-          Así, logramos materializar cada anhelo y proyecto en nuestras vidas. si te gusta soñar y hacer
-          esos sueños realidad ven y haz parte de la familia Distridulces.
-        </p>
-      </div>
-
-    </section>
-
-    <!-- Sección Contáctanos -->
-    <section class="contacto" id="contacto">
-
-      <h2>Contactanos</h2>
-      <p>
-        No dude en comunicarse con nosotros mediante el formulario de contacto a
-        continuación. Estamos aquí para responder cualquier pregunta que pueda tener y
-        brindarle el mejor servicio posible.
-      </p>
-      <!-- Formulario de contacto -->
-
-      <form action="https://formsubmit.co/sebgameover5@gmail.com" method="POST">
-
-        <table>
-          <tr>
-            <td>
-              <input class="lbl-nombre" type="text" name="name" id="name" placeholder="NOMBRE">
-            </td>
-            <td>
-              <input class="lbl-telefono" type="tel" name="phone" id="phone" placeholder="TELEFONO">
-            </td>
-          </tr>
-          <tr>
-            <td colspan="2">
-              <input class="lbl-correo" type="email" name="email" id="email" placeholder="CORREO">
-            </td>
-          </tr>
-          <tr>
-            <td colspan="2">
-              <textarea class="lbl-mensaje" name="message" id="message" placeholder="MENSAJE"></textarea>
-            </td>
-          </tr>
-        </table>
-
-        <input class="enviar-contact" type="submit" value="Enviar">
-
-        <input type="hidden" name="_next" value="http://127.0.0.1:5501/">
-        <input type="hidden" name="_captcha" value="false">
-      </form>
-    </section>
-  </body>
-
-  <footer>
-    <div class="footer">
-      <div class="social-icons">
-        <a href=""><img class="img-instagram" src="resources/img/footer/img-instagram0.png" /></a>
-        <a href=""><img class="img-facebook" src="resources/img/footer/img-facebook0.png" /></a>
-        <a href=""><img class="img-whatapp" src="resources/img/footer/img-whatapp0.png" /></a>
-      </div>
-      <div class="txt-futer">
-        <div class="txt-copy">© 2024 - DISTRIDULCES.</div>
-        <div class="txt-footers">
-          <a href="" class="txt-footer1">Politicas</a>
-          <a href="" class="txt-footer2">Terminos y condiciones</a>
-          <a href="" class="txt-footer3">Contactanos</a>
-          <a href="" class="txt-footer4">Ubicanos</a>
-          <a href="" class="txt-footer5">Productos</a>
-          <a href="" class="txt-footer6">Quienes somos</a>
-        </div>
-      </div>
-      <img class="img-logo" src="resources/img/footer/img-logo0.png" />
-    </div>
-  </footer>
-
-  <script>
-    document.addEventListener("DOMContentLoaded", function () {
-      const slider = document.querySelector('.slider-mobile');
-      const fila = document.querySelector('.fila');
-      const items = document.querySelectorAll('.item');
-      const prevBtn = document.querySelector('.prev-btn');
-      const nextBtn = document.querySelector('.next-btn');
-
-      let currentPosition = 0;
-      const itemWidth = items[0].offsetWidth;
-      const numItems = items.length;
-      const totalWidth = itemWidth * numItems;
-
-      // Definir función para mover el slider
-      function moveSlider() {
-        if (currentPosition <= -totalWidth) {
-          currentPosition = 0;
-        } else {
-          currentPosition -= itemWidth;
-        }
-        fila.style.transform = `translateX(${currentPosition}px)`;
-      }
-
-      // Establecer intervalo para el slider automático
-      const interval = setInterval(moveSlider, 3000);
-
-      // Detener el slider automático al pasar el mouse sobre el slider
-      slider.addEventListener('mouseenter', () => clearInterval(interval));
-
-      // Reanudar el slider automático al retirar el mouse del slider
-      slider.addEventListener('mouseleave', () => setInterval(moveSlider, 5000));
-
-      // Agregar eventos a los botones de navegación
-      nextBtn.addEventListener('click', () => {
-        moveSlider();
-      });
-
-      prevBtn.addEventListener('click', () => {
-        if (currentPosition >= 0) {
-          currentPosition = -totalWidth + itemWidth;
-        } else {
-          currentPosition += itemWidth;
-        }
-        fila.style.transform = `translateX(${currentPosition}px)`;
-      });
-    });
-
-
-    // Inicializar el índice del slider
-    let currentIndex = 0;
-
-    function showUploadForm() {
-      document.getElementById('uploadForm').style.display = 'block';
-    }
-
-    function deleteImage() {
-      // Obtener la imagen actualmente mostrada
-      const currentImage = document.querySelector('.slider img');
-
-      if (!currentImage) {
-        console.error('No se encontró ninguna imagen para eliminar.');
-        return; // Salir de la función si no se encuentra ninguna imagen
-      }
-
-      // Obtener la ID de la imagen del atributo 'alt'
-      const imageId = currentImage.alt;
-
-      // Construir la URL con la ID de la imagen
-      const deleteUrl = `/delete/${imageId}`;
-
-      // Crear una solicitud POST para eliminar la imagen
-      fetch(deleteUrl, {
-        method: 'POST',
-        headers: {
-          'Content-Type': 'application/json'
-        },
-        body: JSON.stringify({ imageId: imageId }) // Enviar la ID de la imagen en el cuerpo de la solicitud
-      })
-        .then(response => {
-          if (!response.ok) {
-            throw new Error('Error al eliminar la imagen');
-          }
-          console.log('Imagen eliminada exitosamente.');
-          // Puedes redirigir o actualizar la página aquí si es necesario
-          window.location.reload();
-        })
-        .catch(error => {
-          console.error('Error al eliminar la imagen:', error.message);
-          // Manejar el error adecuadamente, como mostrar un mensaje al usuario
-        });
-    }
-
-
-    // Función para avanzar al siguiente slide
-    function nextSlide() {
-      const slider = document.querySelector('.slider');
-      const slides = slider.querySelectorAll('img');
-      const slideWidth = slides[0].clientWidth;
-
-      currentIndex = (currentIndex + 1) % slides.length;
-      const offset = -currentIndex * slideWidth;
-
-      slider.style.transform = `translateX(${offset}px)`;
-    }
-
-    // Automáticamente avanzar al siguiente slide cada 3 segundos
-    setInterval(nextSlide, 3000);
-  </script>
-
 
 </body>
 
