Se agrega archivo de base de datos y se arreglan algunos estilos

--- a/views/crud.ejs
+++ b/views/crud.ejs
@@ -53,16 +53,16 @@
         <nav class="navbar">
           <ul class="options-navbar">
             <li>
-              <a href="/" >Inicio</a>
+              <a href="/homecrud" >Inicio</a>
             </li>
             <li>
               <a href="/crud" >Productos</a>
             </li>
             <li>
-              <a href="/#title-Distridulces" >¿Quienes somos?</a>
+              <a href="/homecrud#title-Distridulces" >¿Quienes somos?</a>
             </li>
             <li>
-              <a href="/#contacto" >Contactanos</a>
+              <a href="/homecrud#contacto" >Contactanos</a>
             </li>
           </ul>
           <div class="backgrount-search">
@@ -81,10 +81,10 @@
     
         <nav class="navbar-mobile">
           <img class="logo-mobile-navbar" src="resources/img/header/img-logo-mobile.png" />
-          <a href="/">- Inicio</a>
-          <a href="/">- ¿Quienes Somos?</a>
-          <a href="productPage" >- Productos</a>
-          <a href="/">- Contactanos</a>
+          <a href="/homecrud">- Inicio</a>
+          <a href="/homecrud#title-Distridulces">- ¿Quienes Somos?</a>
+          <a href="/crud" >- Productos</a>
+          <a href="/homecrud#contacto">- Contactanos</a>
                 <label for="check" class="esconder-menu">
                   &#215
                 </label>
@@ -174,9 +174,7 @@
 
         <!-- CONTENEDOR DEL ITEM SELECCIONADO -->
         <div class="seleccion" id="seleccion">
-            <div class="cerrar" onclick="cerrar()">
-                &#x2715
-            </div>
+            
             <div class="info">
                 <div class="contenedor_img"><img src="" alt="" id="img"></div>
                 <div class="contenedor_detalles">
@@ -201,13 +199,6 @@
             <button type="submit">Agregar Categoría</button>
         </form>
     </div>
-
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
 
     <footer>
       <div class="footer">
