--- a/views/home.ejs
+++ b/views/home.ejs
@@ -46,6 +46,11 @@
                 </div>
               </div>
             </div>
+
+            <a href="login" class="a-logout">
+              <div class="txt-iniciar-sesion"><strong style="color:#001f3f;">Iniciar Sesion</strong></div>
+              <img class="user-img" src="resources/img/header/user.png" />
+            </a>
     
           </div>
         </div>
