--- a/public/styles/stylehome.css
+++ b/public/styles/stylehome.css
@@ -1,8 +1,7 @@
 body {
   background: #f5f5f5;
-  font-family: roboto;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   margin: auto;
-  text-align: center;
 }
 
 .login-form,
